Add resource statistics.
